// Top-level build file where you can add configuration options common to all sub-projects/modules.
tasks.withType(JavaCompile).configureEach {
    options.release = 11
}

tasks.withType(Test).configureEach {
    jvmArgs '--enable-preview'
}

buildscript {
    repositories {
        mavenCentral()
        google()
    }
    dependencies {
        classpath 'com.android.tools.build:gradle:8.1.4'
    }
}

allprojects {
    repositories {
        mavenCentral()
        google()
    }
}
